tests/Checker/everything/errors/20b.vc
int main() {
    float a[3] = {1, 2, 3};
    if (a[2]) {}
    return 1;
}
